2007-04-20  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.c: enable word-wrapping in
	the Script-Fu console.

2007-04-19  Sven Neumann  <sven@gimp.org>

	* configure.in (ALL_LINGUAS): added 'km' (Khmer) (bug #420417).

2007-04-19  Sven Neumann  <sven@gimp.org>

	* configure.in: bump the required version of pygtk to 2.10.4.
	Older versions have a bug in the code generator (bug #381389).

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/Makefile.am: don't override LDFLAGS, use AM_LDFLAGS instead.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/gimppluginmanager.[ch]
	* app/plug-in/gimppluginmanager-restore.[ch]: moved
	gimp_plug_in_manager_restore() to its own file.

	* app/core/gimp.c: changed accordingly.

	* app/Makefile.am (LDFLAGS): convince the linker to do its job.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
	try to improve readability by moving code to helper functions.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpinterpreterdb.[ch]: added a function that
	returns all file extensions registered in the interpreter db.

	* app/plug-in/gimppluginmanager.c (gimp_plug_in_manager_restore):
	if the PATHEXT environment variable is set, append all registered
	file extensions to it. This way GIMP can recognize Python scripts
	as plug-ins on platforms where the executable bit is unknown.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* data/tips/gimp-tips.xml.in: fixed a typo.

2007-04-18  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpscrolledpreview.c
	(gimp_scrolled_preview_nav_button_press): applied patch from
	Aurimas Juška that fixes positioning of the quick navigation
	popup (bug #430917).

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c (fp_render_preview): removed a conditional
	that has become obsolete now. Fixed indentation.

2007-04-17  Sven Neumann  <sven@gimp.org>
