@@ -1,3 +1,9 @@
+2007-04-21  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/dbus-service.xml
+	* app/widgets/gimpdbusservice.[ch]: use "uri" instead of "filename"
+	in the D-Bus methods.
+
 2007-04-20  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/script-fu/script-fu-console.c: enable word-wrapping in
